Security groups: Prevent wrapping on account/SG text fields

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -8499,7 +8499,7 @@ div.container div.panel div#details-tab-addloadBalancer.detail-group div.loadBal
 
 .security-rules .multi-edit .range input {
   width: 44px;
-  margin: 0 0 0 8px;
+  margin: 0;
 }
 
 /*Recurring snapshots*/
